--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "npm run test:html",
     "test:html": "globstar nu-html-checker *.html",
     "test:js": "npm-run-all test:*",
+    "test:scss": "stylelint sass/",
     "build": "npm-run-all build:* test",
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
@@ -33,6 +34,8 @@
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0",
-    "onchange": "^6.0.0"
+    "onchange": "^6.0.0",
+    "stylelint": "^10.1.0",
+    "stylelint-scss": "^3.10.0"
   }
 }
