--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         "type": "chrome",
         "request": "launch",
         "name": "Launch Chrome against localhost",
-        "url": "http://localhost:5500",
-        "webRoot": "${workspaceFolder}"
+        "url": "http://localhost:3000",
+        "webRoot": "${workspaceFolder}/js"
     }]
 }
